ver1.1.2c Profile Pictures added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,6 +138,10 @@
             android:name=".About"
             android:label="@string/title_activity_about" >
         </activity>
+        <activity
+            android:name=".profile_pic"
+            android:label="@string/title_activity_profile_pic" >
+        </activity>
     </application>
 
 </manifest>
