ver1.1.2d ListView fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,10 @@
             android:name=".profile_pic"
             android:label="@string/title_activity_profile_pic" >
         </activity>
+        <activity
+            android:name=".student_list_info"
+            android:label="@string/title_activity_student_list_info" >
+        </activity>
     </application>
 
 </manifest>
